using previous code to figure out zotero XHR

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/syllabusforamerica/syllabusforamerica.github.io#readme",
   "devDependencies": {
+    "jquery": "^3.1.1",
     "slug": "^0.9.1"
   }
 }
