--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/syllabusforamerica/syllabusforamerica.github.io#readme",
   "devDependencies": {
     "jquery": "^3.1.1",
+    "request": "^2.78.0",
     "slug": "^0.9.1"
   }
 }
