troubleshooted getting all the zoter library data, zotero limits the number of returned results almost as if it is connected to the number of results per pagination page that get displayed which is wack

--- a/postcss.config.json
+++ b/postcss.config.json
@@ -1,11 +1,6 @@
 
 {
-  "use": ["postcss-import", "cssnano", "postcss-normalize-charset", "postcss-cssnext", "postcss-custom-properties", "postcss-custom-media"],
+  "use": ["postcss-import", "cssnano", "postcss-cssnext", "postcss-custom-properties", "postcss-custom-media"],
   "input": "css/src/index.css",
-  "output": "css/syllabus.min.css",
-  "cssnano": {
-    "normalizeCharset": {
-      "add": true
-    }
-  }
+  "output": "css/syllabus.min.css"
 }
